<resources>
    <string name="app_name">Rs Android Task 4</string>

    <string name="car_name">%1$s %2$s</string>
    <string name="car_price">$%1$s</string>
    <string name="car_body">&lt;font color="#000">Body: &lt;/font>%1$s</string>
    <string name="car_color">&lt;font color="#000">Color: &lt;/font>%1$s</string>
    <string name="car_year">&lt;font color="#000">Year: &lt;/font>%1$d</string>
    <string name="car_mileage">&lt;font color="#000">Mileage: &lt;/font>%1$d</string>
    <string name="car_transmission">&lt;font color="#000">Transmission: &lt;/font>%1$s</string>
    <string name="car_drivetrain">&lt;font color="#000">Drivetrain: &lt;/font>%1$s</string>

    <string name="color_red">Red</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_purple">Purple</string>
    <string name="color_white">White</string>
    <string name="color_gray">Gray</string>
    <string name="color_black">Black</string>

    <string name="select_image">Select Image</string>
    <string name="add_car">Add car</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="fragment_add_car_label">Add car</string>
    <string name="fragment_settings_label">Settings</string>
    <string name="fragment_car_list_label">Car list</string>

    <string name="snackbar_car_added">The car has been added</string>

    <string name="input_car_car_maker_hint">Car maker</string>
    <string name="input_car_car_maker_error">Car maker must be selected</string>

    <string name="input_car_model_hint">Model</string>

    <string name="input_car_price_hint">Price</string>
    <string name="input_car_price_error">Price must be positive</string>

    <string name="input_car_year_hint">Year</string>
    <string name="input_car_year_error">Year must be correct</string>

    <string name="input_car_color_hint">Color</string>
    <string name="input_car_color_error">Car color must be selected</string>

    <string name="input_car_body_hint">Car body</string>
    <string name="input_card_body_error">Car body must be selected</string>

    <string name="input_mileage_hint">Mileage</string>
    <string name="input_mileage_error">Car mileage must be positive</string>

    <string name="input_car_transmission_hint">Transmission</string>
    <string name="input_car_transmission_error">Car transmission must be selected</string>

    <string name="input_car_drivetrain_hint">Car drivetrain</string>
    <string name="input_car_drivetrain_error">Car drivetrain must be selected</string>

    <string name="input_car_description_hint">Description</string>
</resources>