<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="by.agd.rsandroidtask4.binding.ViewBindingConverter" />

        <variable
            name="car"
            type="by.agd.rsandroidtask4.model.Car" />

        <variable
            name="selectImageClickListener"
            type="android.view.View.OnClickListener" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/carMakerInputLayout"
            style="@style/AppTheme.App.DropDownInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/input_car_car_maker_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/logo_bmw"
            app:startIconTint="@color/colorTransparent"
            app:startIconTintMode="screen">

            <AutoCompleteTextView
                style="@style/AppTheme.App.EditText.NoEdit"
                setImageList="@{@typedArray/car_makers_logo}"
                setItemList="@{@stringArray/car_makers_name}"
                setSelected="@={car.carMaker}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/modelInputLayout"
            style="@style/AppTheme.App.EditTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_car_model_hint"
            app:hintEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/priceInputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carMakerInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTheme.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text="@={car.model}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceInputLayout"
            style="@style/AppTheme.App.EditTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_car_price_hint"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/modelInputLayout"
            app:layout_constraintTop_toBottomOf="@id/carMakerInputLayout"
            app:prefixText="$">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTheme.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:text="@={ViewBindingConverter.floatToString(car.price)}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearInputLayout"
            style="@style/AppTheme.App.EditTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_car_year_hint"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/mileageInputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modelInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTheme.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="@={ViewBindingConverter.intToString(car.year)}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mileageInputLayout"
            style="@style/AppTheme.App.EditTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_mileage_hint"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/yearInputLayout"
            app:layout_constraintTop_toBottomOf="@id/priceInputLayout"
            app:suffixText="km">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTheme.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="@={ViewBindingConverter.intToString(car.mileage)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bodyInputLayout"
            style="@style/AppTheme.App.DropDownInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_car_body_hint"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/colorInputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearInputLayout">

            <AutoCompleteTextView
                style="@style/AppTheme.App.EditText.NoEdit"
                setItemList="@{@stringArray/car_body_types}"
                setSelected="@={car.body}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/colorInputLayout"
            style="@style/AppTheme.App.DropDownInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_car_color_hint"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bodyInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/mileageInputLayout">

            <AutoCompleteTextView
                setItemList="@{@stringArray/car_colors}"
                setSelected="@={car.color}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transmissionInputLayout"
            style="@style/AppTheme.App.DropDownInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_car_transmission_hint"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/drivetrainInputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bodyInputLayout">

            <AutoCompleteTextView
                style="@style/AppTheme.App.EditText.NoEdit"
                setItemList="@{@stringArray/car_transmission_types}"
                setSelected="@={car.transmission}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/drivetrainInputLayout"
            style="@style/AppTheme.App.DropDownInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_car_drivetrain_hint"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/transmissionInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/colorInputLayout">

            <AutoCompleteTextView
                style="@style/AppTheme.App.EditText.NoEdit"
                setItemList="@{@stringArray/car_drivetrain_types}"
                setSelected="@={car.drivetrain}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:onClick="@{selectImageClickListener}"
            android:text="@string/select_image"
            app:layout_constraintEnd_toStartOf="@id/selectedImageName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transmissionInputLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/selectedImageName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@{ViewBindingConverter.uriToFilename(car.imageUri)}"
            app:layout_constraintBottom_toBottomOf="@id/selectImageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/selectImageButton"
            app:layout_constraintTop_toTopOf="@+id/selectImageButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionInputLayout"
            style="@style/AppTheme.App.EditTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:hint="@string/input_car_description_hint"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectImageButton">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTheme.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text="@={car.description}" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>